style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html, body {
  overflow-x: hidden;
  scroll-behavior: smooth;
}
body {
  background-image: url(./images/white-wood.jpeg);
}
header .logo {
  margin: 1rem;
  max-width: 100px;
}
header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 3em;
}
header nav {
  width: 100%;
}
header nav ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
  border-top: 1px solid #000;
  border-bottom: 1px solid #000;
  padding: 0 20px;
}
header nav ul li {
  text-align: center;
  padding: 0 10px;
}
header nav ul li a {
  color: #000;
}
main section .image-container {
  width: 320px;
  height: 300px;
  overflow: hidden;
}
main section img {
  width: 100%;
  height: 100%;
}
main section img.up35Reg {
  object-fit: cover;
}
main section img.up35Zoom {
  object-fit: none;
}
main section .image-container .up42 {
  object-fit: cover; 
  object-position: center;
}
main section .descriptionDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5rem;
  padding: 1em;
  height: 100%;
}
main section .descriptionDiv p {
  text-align: center;
}
footer {
  background-image: url(./images/Aba-wood-1.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  color: #fff;
  width: 100%;
  
}
input[type="submit"] {
  background-color: #003152;
  color: #fff;
}
footer .abaLocation,
footer .abaHour {
  margin-top: 1rem;
}
footer nav {
  margin-top: 1rem;

}
footer a {
  color: #fff;
  text-decoration: none;
}
footer nav li {
  text-transform: uppercase;
}
p {
  font-family: 'Montserrat', sans-serif;
}
h1, h2, h3, h4, h5, a {
  text-transform: uppercase;
  font-family: 'Playfair Display', serif;
  letter-spacing: .2rem;
}

ul {
  list-style-type: none;
}

button {
  background-color: #003152;
  border-style: none;
  color: #fff;
  width: 200px;
  height: 30px;
  font-family: 'Playfair Display', serif;
  text-transform: uppercase;
  cursor: pointer;
}

select,
input {
  width: 100%;
  cursor: inherit;
  border-right: 1px solid;
}
input[type="submit"] {
  border-style: none;
  width: 100%;
  border: none;
  font-family: 'Montserrat', sans-serif;
  height: 50px;
}

form#customerDetails input[type="text"], 
form#customerDetails input[type="tel"], 
form#customerDetails input[type="email"] {
  font-size: 1rem;
  width: 100%;
  height: 50px;
  padding: 10px 18px;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
  border-style: none;
  border-right: 1px solid;
  
}
input[type="date"],
select {
  background-color: #fff;
  text-align: center;
  width: 100%;
  height: 50px;
  font-size: 1rem;
  font-family: 'Montserrat', sans-serif;
  cursor: pointer;
  appearance: none; 
  -webkit-appearance: none; 
  -moz-appearance: none; 
  border-style: none;
  border-right: 1px solid;
}


.hamburger {
  display: none; 
  cursor: pointer;
  position: fixed;
  top: 10px;
  right: 10px;
  z-index: 900; 
}

.hamburger div {
  width: 30px;
  height: 3px;
  background-color: #333;
  margin: 6px 0;
  transition: 0.4s;
}
.hamburger.active div {
 background-color:#fff;
}

.hamburger.active div:nth-child(1) {
  transform: rotate(-45deg) translate(-5px, 8px);
}

.hamburger.active div:nth-child(2) {
  opacity: 0;
}

.hamburger.active div:nth-child(3) {
  transform: rotate(45deg) translate(-5px, -8px);
}

.fullscreenNav {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); 
  z-index: 899; 
  animation: fade 0.3s ease-in;
}
.fullscreenNav .nav-links {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
}
.link {
  text-decoration: none;
  position: relative; 
}

.link::after {
  content: ""; 
  position: absolute; 
  left: 0;
  bottom: -2px; 
  width: 0%; 
  border-bottom: 1px solid #fff; 
  transition: width 0.3s ease; 
}
.link:hover::after {
  width: 100%;
}
.fullscreenNav .nav-links a {
  font-family: 'Playfair Display', serif;
  color: #fff;
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7); 
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  z-index: 999;
  animation: fade 0.3s ease-in;
  color: #fff;
}
.closeButton {
  cursor: pointer;
  color: white;
  font-size: 24px;
}

.reservationDetails,
.customerDetails {
  display: flex;
  align-items: center;
  justify-content: space-around;
  text-align: center;
  width: 100%;
  height: 100%;
  border: 1px solid;
}
.reservationForm {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2em;
  margin: 1em 0;
}
.form-container {
  width: 100%;
}
.image-container {
  object-fit: cover;
}

.appImg {
  display: none;
}

.hidden {
  display: none;
}
/* Key Frames */
@keyframes fade {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}


/*Small Phones - Medium Tablets*/
@media screen and (max-width: 1023px) {
  header {
    flex-direction: column;
    align-items: center;
  }
  header nav {
    flex-direction: column;
    display: none;
  }
  header .logo {
    max-width: 100px;
  }
  footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    text-align: center;
  }
  footer nav {
    width: 100%;
    display: flex;
    justify-content: space-around;
  }
  footer nav ul {
    text-align: center;
  }
  footer nav ul li {
    margin: 1em;
  }
  footer nav ul li a {
    font-size: 0.8rem;
  }

  main section .image-container img.up35Zoom {
    object-fit: none;
  }
  main section .image-container img.up42,
  main section .image-container img.up35Reg {
    object-fit: cover; 
    object-position: center;
  }
  section {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  main section .image-container {
    min-width: 80%;
    height: 300px;
    overflow: hidden;
  }
  .hamburger {
    display: block; 
  }
  .banner-grid {
    width: 100%;
    height: 100%;
    position: relative;
    object-fit: cover;
  }
  img.image1 {
    display: none;
  }
  .banner-grid img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
  .reservationForm {
    min-width: 100vw;
    text-align: center;
  }
  .reservationDetails {
    flex-direction: column;
  }
  .customerDetails {
    flex-direction: column;
    background-color: #fff;
  }
  form#customerDetails input[type="text"], 
  form#customerDetails input[type="tel"], 
  form#customerDetails input[type="email"] {
    border-bottom: 1px solid;
  }
  input, input[type="date"], select {
    border-bottom: 1px solid;
    text-align: center; 
  } 
  
  .appImg {
    width: 100%;
    background-image: url(./images/white-wood.jpeg);
    display: block;
    padding: 1em;
  }

  .appImg img {
    max-width: 120px;
    object-fit: cover;
  }
}
/*Tablets + Desktop*/
@media screen and (min-width: 1024px) {
  section {
    padding: 0 1em;
  }
  main {
    margin: 50px;
  }
  section.section-flex {
  
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row
  }
  section.section-flex.reverse {
    flex-direction: row-reverse;
  }
  
  .image-container {
    min-width: 350px;
    height: 100%;

  }
  main section .descriptionDiv {
    border-top: 1px solid #333;
    border-bottom: 1px solid #333;
  }
  main section .descriptionDiv p {
    letter-spacing: 0.5px;
  }
  main section img {
    width: 100%;
  }

  footer {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    background-size: auto;
    position: relative;
  }

  footer nav {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-top: 5em;
  }
  footer nav ul {
    display: flex;
    
  }
  footer nav ul li {
    padding: 10px;
  }
  button {
    width: 250px;
    height: 40px;
  }
  .banner-grid {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-gap: 1em;
    align-items: stretch;
  }
  .banner-grid-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: hidden;
  }
  .banner-grid-container-1 {
    width: 100%; 
    height: 100%;
  }
  .banner-grid-container-2 {
    width: 100%; 
    height: 100%; 
  }
  .banner-grid img {
    width: 100%;
    height: 100%;
  }
  .banner-grid-container-1 img {
    max-width: 100%;
    max-height: 100%;
    object-fit: none;
    object-position: 70% 100%;
  }
  .banner-grid-container-2 img {
    max-width: 100%;
    max-height: 100%;
    object-fit: cover;
  }
  .form-container {
    text-align: center;
  }
  .reservationForm {
    padding: 20px;
    border-top: 1px solid #000;
    border-bottom: 1px solid #000;
  }
  .abaInfo {
    display: flex;
    flex-direction: row;
    gap: 2em;
    margin-right: 20%;
    
  }
  
  
  
}

